cargo-features = ["codegen-backend"]

[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
ffmpeg-the-third = "3.0.1"
macroquad = { version = "0.4.14", features = ["audio"] }

[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

